--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="box"></div>
-    <div class="box"></div>
-    <div class="box"></div>
+    <div id="app">
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+    </div>
   </body>
 </html>
