--- a/index.html
+++ b/index.html
@@ -8,5 +8,28 @@
 
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <header id="main-header">
+      <div class="content">
+        <nav>
+          <ul>
+            <li><img src="/images/home.svg" alt="Home" />Home</li>
+            <li>
+              <img
+                src="/images/notification.svg"
+                alt="Notifications"
+              />Notifications
+            </li>
+            <li><img src="/images/message.svg" alt="Messages" />Messages</li>
+          </ul>
+        </nav>
+        <img src="/images//logo.svg" alt="Logo Twitter" />
+        <div class="side">
+          <input type="text" placeholder="Search on Twitter" />
+          <img src="/images/avatar.png" alt="" />
+          <button>Tweet</button>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
