--- a/index.html
+++ b/index.html
@@ -31,5 +31,9 @@
         </div>
       </div>
     </header>
+
+    <div class="banner">
+      <h1>Twitter da Rocketseat</h1>
+    </div>
   </body>
 </html>
