--- a/index.html
+++ b/index.html
@@ -71,5 +71,67 @@
         </div>
       </div>
     </div>
+
+    <div class="wrapper-content content">
+      <aside class="profile">
+        <img class="avatar" src="/images/avatar.png" alt="William Brito" />
+        <h1>William Brito</h1>
+        <span>@Exibit</span>
+        <p>
+          Web, Design & Rock 'n roll Partner/UI Designer @spade_be Musician in
+          @dashboxmusic
+        </p>
+        <ul class="list">
+          <li><img src="/images/place.svg" alt="Place" /> Namur, Belgiun</li>
+          <li><img src="/images/url.svg" alt="URL" /> exibit.be</li>
+          <li>
+            <img src="/images/joined.svg" alt="Joined" /> Joined June 2007
+          </li>
+          <li>
+            <img src="/images/born.svg" alt="Born" /> Born the 20th of June 1978
+          </li>
+        </ul>
+
+        <div class="widget followers">
+          <strong
+            ><img src="/images/followers.svg" alt="Followers" />
+            73 followers that you know
+          </strong>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+
+        <div class="widget images">
+          <strong
+            ><img src="/images/images.svg" alt="Images" />
+            266 Photos and videos
+          </strong>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+      </aside>
+      <section class="timelime">
+        timelime
+      </section>
+      <aside class="widgets">
+        widgets
+      </aside>
+    </div>
   </body>
 </html>
